--- a/{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/templates/{{cookiecutter.app_name}}/base.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/templates/{{cookiecutter.app_name}}/base.html
@@ -6,17 +6,17 @@
 
         Example: Developer melding the 2SoD pattern to fit inside with another pattern::
 
-            {#% extends "base.html" %#}
-            {#% load static %#}
+            {% extends "base.html" %}
+            {% load static %}
 
             <!-- Their site uses old school block layout -->
-            {#% block extra_js %#}
+            {% block extra_js %}
 
                 <!-- Your package using 2SoD block layout -->
-                {#% block javascript %#}
-                    <script src="{% static 'js/ninja.js' %}" type="text/javascript"></script>
-                {#% endblock javascript %#}
+                {% block javascript %}
+                    <script src="{#% static 'js/ninja.js' %#}" type="text/javascript"></script>
+                {% endblock javascript %}
 
-            {#% endblock extra_js %#}
+            {% endblock extra_js %}
     {% endcomment %}
 {% endraw %}
